# MtsTrueTech

./: README.md  index.html  package-lock.json
TrueTabsIntegration/: .gitignore
TrueTabsIntegration/data_extractor/: Cargo.toml
TrueTabsIntegration/data_extractor/src/: file_loader.rs  main.rs
TrueTabsIntegration/data_extractor/src/db/: mod.rs  nosql.rs  sql.rs  truetabs.rs
TrueTabsIntegration/telegram_bot/: bot.py  config.py  requirements.txt
TrueTabsIntegration/telegram_bot/database/: __init__.py  sqlite_db.py
TrueTabsIntegration/telegram_bot/handlers/: __init__.py  config_handlers.py  history_handlers.py  params_handlers.py  scheduled_handlers.py  shared_constants.py  source_handlers.py  start_handlers.py  upload_handlers.py  weather_handlers.py
TrueTabsIntegration/telegram_bot/keyboards/: __init__.py  inline.py
TrueTabsIntegration/telegram_bot/utils/: __init__.py  encryption.py  rust_executor.py
front/: package.json
front/src/components/: ExperimentList.tsx  Navbar.tsx
front/src/data/: mockData.ts
front/src/pages/: ComparisonPage.tsx  HomePage.tsx
personal_account_log_sign/: login.css  login.html  login.js  profile.css  profile.html
src/: App.tsx  index.css  main.tsx
src/components/: ExperimentForm.tsx  FileUpload.tsx  Layout.tsx  Navbar.tsx  SearchBar.tsx
src/components/Layout/: Layout.tsx
src/context/: NotificationsContext.tsx
src/pages/: ExperimentDetail.tsx  LoginPage.tsx  NotFound.tsx  ProfilePage.tsx
src/types/: index.ts
triggers_vers/: bot.py  diagramm.md  manual_test.py  test_versioning.py  versioning.py
(+6 files in other folders)
